--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,5 +2,10 @@
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
-  justify-content: center;
 }
+
+/* .wrap {
+  display: flex;
+  justify-content: center;
+  width: 1230px;
+} */
